# AFEC

./: CMakeLists.txt  README.md  TODO.md
cmake/: version.h.in
include/afecs/: ISystem.hpp  World.hpp  WorldComponentView.hpp
include/afecs/internal/: ComponentContainer.hpp  EntityPool.hpp
include/afecs/utils/: Selection.hpp  Signature.hpp
include/afecs/utils/id/: Id.hpp  TypeIdFamily.hpp
src/: World.cpp
tests/: CMakeLists.txt
tests/include/AfecsTests/: TestsHeader.hpp
tests/include/AfecsTests/Main/: ComponentTests.hpp  EntityTests.hpp  SystemTests.hpp
tests/include/AfecsTests/Resources/: Components.hpp  Systems.hpp
tests/include/AfecsTests/Utils/: ContainerTests.hpp  SignatureTests.hpp
tests/src/: AfecsTests.cpp
